--- a/elogroup-app/tsconfig.app.json
+++ b/elogroup-app/tsconfig.app.json
@@ -5,6 +5,7 @@
     "outDir": "./out-tsc/app",
     "types": []
   },
+  "angularCompilerOptions" : { "enableIvy": true },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
